src/objects/CH_Fields_To_Track__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for tracking fields.</description>
    <fields>
        <fullName>CH_API_name_Field__c</fullName>
        <description>Fields to track object setting field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API name Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_API_name_Object__c</fullName>
        <description>Used for custom setting object.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>API name Object</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Created_by__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Created_on__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Created on</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Fields To Track</label>
</CustomObject>